# mortgage-calculator

./: .pre-commit-config.yaml  LICENSE  README.md  TODO.md  calculator.ipynb  pyproject.toml
.github/workflows/: cicd.yaml
src/: __init__.py  test.py
src/mortgage_calculator_helpers/: __init__.py  calculate_tax.py
tests/: test_calculate_tax.py
