[project]
name = "mortgage-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "nizwant",email = "mateusznizwantowski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "cloud-import (>=0.4,<0.5)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
