[project]
name = "mortgage-calculator"
version = "0.1.0"
description = "This project tries to estimate the costs associated with mortgage, it tries to strike balance between simplicity and customizability"
authors = [
    {name = "Mateusz Nizwantowski",email = "mateusznizwantowski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "cloud-import (>=0.4,<0.5)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
